src/snapshots/jjpwrgem__cli__tests__object_trailing_comma.snap
---
source: src/cli.rs
expression: annotated
---
error: expected key, found no significant characters
 --> stdin:1:12
  |
1 | {"hi": null, 
  |            ^
  |            |
  |            expected due to `,`
  |
help: consider replacing the trailing comma with a closed curly brace
  |
1 - {"hi": null, 
1 + {"hi": null} 
  |
